Name:                opengl-simulations
Version:             0.0.3
Description:         Friendly opengl simulation framework with good defaults
License:             BSD3
Author:              James Halliday
Maintainer:          substack@gmail.com
Build-Depends:       base, GLUT, time, template-haskell, containers
Exposed-modules:     Graphics.UI.Simulation3D, Graphics.UI.Simulation3D.Shader
hs-source-dirs:      lib
Build-Type:          Simple
