Name:                opengl-simulations
Version:             0.0.3
Description:         Friendly opengl simulation framework with good defaults
License:             BSD3
Author:              James Halliday
Maintainer:          substack@gmail.com
Build-Depends:       base, GLUT, time, template-haskell, containers, mtl,
                     hmatrix, hmatrix-transform
Exposed-modules:     Graphics.UI.Simulation3D,
                     Graphics.UI.Simulation3D.Base,
                     Graphics.UI.Simulation3D.Util,
                     Graphics.UI.Simulation3D.Shader,
                     Graphics.UI.Simulation3D.Navigator
hs-source-dirs:      lib
Build-Type:          Simple
